Refactor Tetris Game color management and block handling; switch to array for colors, optimize GetCellPosition function more optimize

--- a/SortingRepresentation/.vscode/settings.json
+++ b/SortingRepresentation/.vscode/settings.json
@@ -11,6 +11,7 @@
 	"files.associations": {
 		"*.embeddedhtml": "html",
 		"algorithm": "cpp",
-		"format": "cpp"
+		"format": "cpp",
+		"chrono": "cpp"
 	}
 }
