--- a/raylib-imgui-cmake-template/CMakeLists.txt
+++ b/raylib-imgui-cmake-template/CMakeLists.txt
@@ -1,32 +1,43 @@
 cmake_minimum_required(VERSION 3.10)
-
-# Set the project name. This is not the executable program's name!
 project(rlImgui_template)
 
-# Try to find a locally installed raylib, but don't quit on fail
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
+# Try to find a locally installed raylib
 find_package(raylib 5.5 QUIET)
 
-# This code downloads raylib into a directory called _deps and adds it as a subdirectory, compiling it with the program when running the build command
 include(FetchContent)
 if (NOT raylib_FOUND)
     FetchContent_Declare(
         raylib
         URL https://github.com/raysan5/raylib/archive/refs/tags/5.5.tar.gz
-        DOWNLOAD_EXTRACT_TIMESTAMP True #This option is not required but suppresses a warning
+        DOWNLOAD_EXTRACT_TIMESTAMP True
     )
     FetchContent_MakeAvailable(raylib)
 endif()
 
-# We don't want raylib's examples built. This option is picked up by raylib's CMakeLists.txt
+# Collect source files only (.cpp)
+file(GLOB PROJECT_SRC_CPP "src/*.cpp")
+
+# rlImGui and ImGui sources
 set(RLIMGUI_SRC rlImGui/rlImGui.cpp)
-set(IMGUI_SRC imgui/imgui.cpp imgui/imgui_draw.cpp imgui/imgui_tables.cpp imgui/imgui_widgets.cpp imgui/imgui_demo.cpp )
+set(IMGUI_SRC imgui/imgui.cpp imgui/imgui_draw.cpp imgui/imgui_tables.cpp imgui/imgui_widgets.cpp imgui/imgui_demo.cpp)
 
-# Here, the executable is declared with its sources. "main", or "main.exe" on windows will be the program's name
-add_executable(main "src/main.cpp" ${IMGUI_SRC} ${RLIMGUI_SRC})
+# Copy assets to the build directory
+file(COPY ${CMAKE_SOURCE_DIR}/src/assets DESTINATION ${CMAKE_BINARY_DIR})
 
-# Link raylib to main
-target_link_libraries(main 
-    raylib
+# Create executable
+add_executable(main ${PROJECT_SRC_CPP} ${RLIMGUI_SRC} ${IMGUI_SRC})
+
+# Add include directories — this is what lets you include .hpp/.h files
+target_include_directories(main PRIVATE 
+    ${raylib_SOURCE_DIR}/src 
+    ${CMAKE_SOURCE_DIR}/imgui 
+    ${CMAKE_SOURCE_DIR}/rlImGui 
+    ${CMAKE_SOURCE_DIR}/src  # <-- This is what includes your .h/.hpp headers!
 )
 
-target_include_directories(main PRIVATE ${raylib_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/imgui ${CMAKE_SOURCE_DIR}/rlImGui )
+# Link libraries
+target_link_libraries(main raylib)
