Remove the FIleExplorer

--- a/raylib-imgui-cmake-template/CMakeLists.txt
+++ b/raylib-imgui-cmake-template/CMakeLists.txt
@@ -26,7 +26,9 @@ set(RLIMGUI_SRC rlImGui/rlImGui.cpp)
 set(IMGUI_SRC imgui/imgui.cpp imgui/imgui_draw.cpp imgui/imgui_tables.cpp imgui/imgui_widgets.cpp imgui/imgui_demo.cpp)
 
 # Copy assets to the build directory
-file(COPY ${CMAKE_SOURCE_DIR}/src/assets DESTINATION ${CMAKE_BINARY_DIR})
+if(EXISTS "${CMAKE_SOURCE_DIR}/assets")
+    file(COPY ${CMAKE_SOURCE_DIR}/assets DESTINATION ${CMAKE_BINARY_DIR})
+endif()
 
 # Create executable
 add_executable(main ${PROJECT_SRC_CPP} ${RLIMGUI_SRC} ${IMGUI_SRC})
